--- a/main/style.css
+++ b/main/style.css
@@ -6,14 +6,14 @@
 }
 
 body {
-    background: white;
+    background: rgb(51, 94, 195);
 }
 
 .expenseBody {
     width: 50%;
     max-width: 750px;
     margin: 0 auto;
-    box-shadow: rgba(125, 125, 131, 0.87) 0px 7px 29px 0px;
+    box-shadow: rgba(121, 121, 219, 0.87) 0px 7px 29px 0px;
 }
 
 .title {
@@ -34,7 +34,7 @@ body {
 }
 
 .content {
-    background-color: white;
+    background-color: rgb(36, 19, 162);
     padding: 50px 100px;
 }
 
